python/testData/highlighting/starInGenerator.py
y = (<error descr="Cannot use starred expression here">*()</error> for _ in ())